--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
     </div>
 
     <div class="skill-demo-1-container" id="skill-demo">
+      <img src="images/web-dev-bg.jpg">
       <div class="video-demo-container">
         <iframe width="100%" height="100%" src="https://www.youtube.com/embed/F4fbwKV9dBU"
          title="YouTube video player" frameborder="0" 
@@ -108,6 +109,7 @@
     </div>   
 
     <div class="skill-demo-2-container">  
+      <img src="images/photo-edit-bg.jpg">
       <div class="skill-description-container">
         <div class="skill-2" onclick="showDescription()" id="skill-button-function">
           PHOTO EDITING
@@ -124,6 +126,7 @@
     </div> 
 
     <div class="skill-demo-3-container" >
+      <img src="images/video-edit-bg.jpg">
       <div class="video-demo-container">
         <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fprivatejeff%2Fvideos%2F3110517949045388%2F&width=500&show_text=false&height=281&appId"
          width="500" height="281" style="border:none;overflow:hidden" scrolling="no" 
@@ -141,6 +144,7 @@
     </div> 
 
     <div class="skill-demo-4-container">  
+      <img src="images/copywriting-bg.jpg">
       <div class="skill-description-container">
         <div class="skill-4" onclick="showDescription()" id="skill-button-function">
           COPYWRITING
@@ -154,6 +158,7 @@
     </div>
 
     <div class="skill-demo-5-container">
+      <img src="images/lead-gen-bg.jpg">
       <div class="video-demo-container">
       </div>
       <div class="skill-description-container">
@@ -166,7 +171,8 @@
       </div>
     </div> 
 
-    <div class="skill-demo-6-container">  
+    <div class="skill-demo-6-container"> 
+      <img src="images/bookkeeping-bg.jpg">
       <div class="skill-description-container">
         <div class="skill-6" onclick="showDescription()" id="skill-button-function">
           BOOKKEEPING
@@ -180,6 +186,7 @@
     </div>
 
     <div class="skill-demo-7-container">
+      <img src="images/seo-bg.jpg">
       <div class="video-demo-container">
       </div>
       <div class="skill-description-container">
@@ -193,6 +200,7 @@
     </div> 
 
     <div class="skill-demo-8-container">  
+      <img src="images/fba-amazon-bg.jpg"> 
       <div class="skill-description-container">
         <div class="skill-8" onclick="showDescription()" id="skill-button-function">
           AMAZON FBA EXPERT
