--- a/index.html
+++ b/index.html
@@ -224,11 +224,13 @@
 
     <div class="contact-container" id="contact">  
       <div class="container-top">
+        <div class="text">
         <p class="contact-label">CONTACT ME</p>
         <p class="contact-message">Need an expert? You are more than welcome to contact me. Schedule
           an interview, give me a call, or send me the job description. I reply
           promptly within the day.
         </p>
+        </div>
       </div>
       <div class="contact-info" id="contact-me">
         <div  class="home">
