--- a/index.html
+++ b/index.html
@@ -274,7 +274,29 @@
     </div>
     
     <div class="stalk-container">
-      <div class="reference-container"></div>
+      <div class="reference-container">
+        <div class="div-holder">
+          <div><p class="ref"><strong>REFERENCES</strong></p></div>
+        </div>
+        <div class="reference-holder">
+          <div>
+            <p class="ref-name">Vino Angelo Bolisay</p>
+            <p class =ref-position>Software Engineer</p>
+            <p class="ref-company">Proplerr</p>
+          </div>
+            <p class="ref-name">Ma. Veronica Moran</p>
+            <p class =ref-position>Bank Manager</p>
+            <p class="ref-company">CARD SME Bank Inc.</p>
+          <div>
+          </div>
+          <div>
+            <p class="ref-name">Gon Freecs</p>
+            <p class =ref-position>Hunter</p>
+            <p class="ref-company">HunterXHunter</p>
+          </div>
+        </div>
+      </div>
+      
       <div class="stalker-mode-container">
         <p class="stalker-mode" id="stalk">STALKER MODE</p>
         <p class="stalk-profile">Feel free to stalk my social profiles</p>
