--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
           I helped my client with administrative tasks, data entry,
           transcription, research, web design, basic graphics design, copywriting, social media ads, and more.
           I treat every client like a high-value business partner and focus on providing satisfaction.
-          Quality is important to me. I'm willing to go through training and learn new skills if necessary and to help in the long term.
-          If you are having trouble managing your time, then I will help you reduce your workload and give you more time to focus on your core business.
+          Quality is important to me. I'm willing to go through training and learn new skills if necessary and to help in the long term.            If you are having trouble managing your time, then I will help you reduce your workload and give you more time to focus on your core business.
           You don't have to do all the tasks by yourself.
             </p>
         </div>
@@ -129,8 +128,10 @@
     <div class="skill-demo-3-container" >
       <img src="images/video-edit-bg.jpg">
       <div class="video-demo-container">
-        <iframe width="100%" height="100%" src="https://www.youtube-nocookie.com/embed/haefc_Uh914" title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fprivatejeff%2Fvideos%2F3110517949045388%2F&width=500&show_text=false&height=281&appId"
+         width="500" height="281" style="border:none;overflow:hidden" scrolling="no" 
+         frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" 
+         allowFullScreen="true"></iframe>
       </div>
       <div class="skill-description-container">
         <div class="skill-3" onclick="showDescription()" id="skill-button-function">
@@ -153,16 +154,12 @@
         and what are the experiences and knowlegde etc.</div>
       </div>
       <div class="video-demo-container">
-        <iframe width="100%" height="100%" src="https://www.youtube-nocookie.com/embed/giIjE1TP-q8" title="YouTube video player"
-                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
 
     <div class="skill-demo-5-container">
       <img src="images/lead-gen-bg.jpg">
       <div class="video-demo-container">
-        <iframe width="100%" height="100%" src="https://www.youtube-nocookie.com/embed/30kFmT0GXc8" title="YouTube video player"
-                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="skill-description-container">
         <div class="skill-5" onclick="showDescription()" id="skill-button-function">
@@ -174,7 +171,7 @@
       </div>
     </div> 
 
-    <div class="skill-demo-6-container"> 
+    <div class="skill-demo-6-container">  
       <img src="images/bookkeeping-bg.jpg">
       <div class="skill-description-container">
         <div class="skill-6" onclick="showDescription()" id="skill-button-function">
@@ -185,16 +182,12 @@
         and what are the experiences and knowlegde etc.</div>
       </div>
       <div class="video-demo-container">
-        <iframe width="100%" height="100%" src="https://www.youtube-nocookie.com/embed/TxIYn615zBg" title="YouTube video player" 
-                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
 
     <div class="skill-demo-7-container">
       <img src="images/seo-bg.jpg">
       <div class="video-demo-container">
-        <iframe width="100%" height="100%" src="https://www.youtube-nocookie.com/embed/p8nFp8joUAk" title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="skill-description-container">
         <div class="skill-7" onclick="showDescription()" id="skill-button-function">
@@ -206,7 +199,7 @@
       </div>
     </div> 
 
-    <div class="skill-demo-8-container">  
+    <div class="skill-demo-8-container"> 
       <img src="images/fba-amazon-bg.jpg"> 
       <div class="skill-description-container">
         <div class="skill-8" onclick="showDescription()" id="skill-button-function">
@@ -217,20 +210,19 @@
         and what are the experiences and knowlegde etc.</div>
       </div>
       <div class="video-demo-container">
-        <iframe width="100%" height="100%" src="https://www.youtube-nocookie.com/embed/TlXA6bA63zM" title="YouTube video player" 
-                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
 
     <div class="contact-container" id="contact">  
       <div class="container-top">
         <div class="text">
-        <p class="contact-label">CONTACT ME</p>
+          <p class="contact-label">CONTACT ME</p>
         <p class="contact-message">Need an expert? You are more than welcome to contact me. Schedule
           an interview, give me a call, or send me the job description. I reply
           promptly within the day.
         </p>
         </div>
+        
       </div>
       <div class="contact-info" id="contact-me">
         <div  class="home">
@@ -284,19 +276,11 @@
             <p class =ref-position>Software Engineer</p>
             <p class="ref-company">Proplerr</p>
           </div>
-            <p class="ref-name">Ma. Veronica Moran</p>
-            <p class =ref-position>Bank Manager</p>
-            <p class="ref-company">CARD SME Bank Inc.</p>
-          <div>
-          </div>
-          <div>
-            <p class="ref-name">Gon Freecs</p>
-            <p class =ref-position>Hunter</p>
-            <p class="ref-company">HunterXHunter</p>
-          </div>
+          <div>2</div>
+          <div>3</div>
         </div>
       </div>
-      
+
       <div class="stalker-mode-container">
         <p class="stalker-mode" id="stalk">STALKER MODE</p>
         <p class="stalk-profile">Feel free to stalk my social profiles</p>
@@ -304,21 +288,21 @@
           <div class="social-media-holder">
             <div id="facebook">
               <a href="https://www.facebook.com/privatejeff/" target="_blank">
-              <img src="icons/facebook-icon.png"></a>            
+              <img src="/icons/facebook-icon.png"></a>            
             </div>
             <div id="instagram">
               <a href="https://www.instagram.com/jep.bautista/?hl=en" target="_blank">
-              <img src="icons/instagram-icon.png"></a>            
+              <img src="/icons/instagram-icon.png"></a>            
             </div>
             <div id="twitter">
               <a href="https://twitter.com/JepXtski" target="_blank">
-              <img src="icons/twitter.png"></a>
+              <img src="/icons/twitter.png"></a>
             </div>
             <div id="linkin">
               <a href="https://www.linkedin.com/in/bautistajeffrey/" target="_blank">
-              <img src="icons/linkin.png"></a>
+              <img src="/icons/linkin.png"></a>
             </div>
-          </div> 
+          </div>
         </div>
       </div>  
     </div>
