--- a/index.html
+++ b/index.html
@@ -288,19 +288,19 @@
           <div class="social-media-holder">
             <div id="facebook">
               <a href="https://www.facebook.com/privatejeff/" target="_blank">
-              <img src="/icons/facebook-icon.png"></a>            
+              <img src="icons/facebook-icon.png"></a>            
             </div>
             <div id="instagram">
               <a href="https://www.instagram.com/jep.bautista/?hl=en" target="_blank">
-              <img src="/icons/instagram-icon.png"></a>            
+              <img src="icons/instagram-icon.png"></a>            
             </div>
             <div id="twitter">
               <a href="https://twitter.com/JepXtski" target="_blank">
-              <img src="/icons/twitter.png"></a>
+              <img src="icons/twitter.png"></a>
             </div>
             <div id="linkin">
               <a href="https://www.linkedin.com/in/bautistajeffrey/" target="_blank">
-              <img src="/icons/linkin.png"></a>
+              <img src="icons/linkin.png"></a>
             </div>
           </div>
         </div>
