--- a/index.html
+++ b/index.html
@@ -128,10 +128,8 @@
     <div class="skill-demo-3-container" >
       <img src="images/video-edit-bg.jpg">
       <div class="video-demo-container">
-        <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fprivatejeff%2Fvideos%2F3110517949045388%2F&width=500&show_text=false&height=281&appId"
-         width="500" height="281" style="border:none;overflow:hidden" scrolling="no" 
-         frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" 
-         allowFullScreen="true"></iframe>
+        <iframe width="100%" height="100%" src="https://www.youtube-nocookie.com/embed/haefc_Uh914" title="YouTube video player"
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="skill-description-container">
         <div class="skill-3" onclick="showDescription()" id="skill-button-function">
@@ -154,12 +152,16 @@
         and what are the experiences and knowlegde etc.</div>
       </div>
       <div class="video-demo-container">
+        <iframe width="100%" height="100%" src="https://www.youtube-nocookie.com/embed/giIjE1TP-q8" title="YouTube video player" 
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
 
     <div class="skill-demo-5-container">
       <img src="images/lead-gen-bg.jpg">
       <div class="video-demo-container">
+        <iframe width="100%" height="100%" src="https://www.youtube-nocookie.com/embed/30kFmT0GXc8" title="YouTube video player" 
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="skill-description-container">
         <div class="skill-5" onclick="showDescription()" id="skill-button-function">
@@ -182,12 +184,16 @@
         and what are the experiences and knowlegde etc.</div>
       </div>
       <div class="video-demo-container">
+        <iframe width="100%" height="100%" src="https://www.youtube-nocookie.com/embed/TxIYn615zBg" title="YouTube video player"
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
 
     <div class="skill-demo-7-container">
       <img src="images/seo-bg.jpg">
       <div class="video-demo-container">
+        <iframe width="100%" height="100%" src="https://www.youtube-nocookie.com/embed/p8nFp8joUAk" title="YouTube video player" 
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="skill-description-container">
         <div class="skill-7" onclick="showDescription()" id="skill-button-function">
@@ -210,6 +216,8 @@
         and what are the experiences and knowlegde etc.</div>
       </div>
       <div class="video-demo-container">
+        <iframe width="100%" height="100%" src="https://www.youtube-nocookie.com/embed/TlXA6bA63zM" title="YouTube video player" 
+         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
 
