--- a/index.html
+++ b/index.html
@@ -283,9 +283,23 @@
             <p class="ref-name">Vino Angelo Bolisay</p>
             <p class =ref-position>Software Engineer</p>
             <p class="ref-company">Proplerr</p>
+            <a href="linkedin.com/in/vino-angelo-bolisay-99a53379" target="_blank">
+            <p class="ref-email">View Profile</p></a>
           </div>
-          <div>2</div>
-          <div>3</div>
+          <div>
+          <p class="ref-name">Vino Angelo Bolisay</p>
+            <p class =ref-position>Software Engineer</p>
+            <p class="ref-company">Proplerr</p>
+            <a href="linkedin.com/in/vino-angelo-bolisay-99a53379" target="_blank">
+            <p class="ref-email">View Profile</p></a>
+          </div>
+          <div>
+          <p class="ref-name">Vino Angelo Bolisay</p>
+            <p class =ref-position>Software Engineer</p>
+            <p class="ref-company">Proplerr</p>
+            <a href="linkedin.com/in/vino-angelo-bolisay-99a53379" target="_blank">
+            <p class="ref-email">View Profile</p></a>
+          </div>
         </div>
       </div>
 
