--- a/index.html
+++ b/index.html
@@ -283,21 +283,21 @@
             <p class="ref-name">Vino Angelo Bolisay</p>
             <p class =ref-position>Software Engineer</p>
             <p class="ref-company">Proplerr</p>
-            <a href="linkedin.com/in/vino-angelo-bolisay-99a53379/" target="_blank" style="text-decoration: none; letter-spacing: 5px;" >
+            <a href="https://www.linkedin.com/in/vino-angelo-bolisay-99a53379/" target="_blank" style="text-decoration: none; letter-spacing: 5px;" >
             <p class="ref-email">VIEW PROFILE</p></a>
           </div>
           <div>
             <p class="ref-name">Vino Angelo Bolisay</p>
             <p class =ref-position>Software Engineer</p>
             <p class="ref-company">Proplerr</p>
-            <a href="linkedin.com/in/vino-angelo-bolisay-99a53379/" target="_blank" style="text-decoration: none; letter-spacing: 5px;" >
+            <a href="https://www.linkedin.com/in/vino-angelo-bolisay-99a53379/" target="_blank" style="text-decoration: none; letter-spacing: 5px;" >
             <p class="ref-email">VIEW PROFILE</p></a>
           </div>
           <div>
             <p class="ref-name">Vino Angelo Bolisay</p>
             <p class =ref-position>Software Engineer</p>
             <p class="ref-company">Proplerr</p>
-            <a href="linkedin.com/in/vino-angelo-bolisay-99a53379/" target="_blank" style="text-decoration: none; letter-spacing: 5px;" >
+            <a href="https://www.linkedin.com/in/vino-angelo-bolisay-99a53379/" target="_blank" style="text-decoration: none; letter-spacing: 5px;" >
             <p class="ref-email">VIEW PROFILE</p></a>
           </div>
         </div>
