--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="eng">
-  <head>  
+<html>
+  <head>
     <link rel="stylesheet" href="css/general.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,7 +32,7 @@
           </div>
           <div>
             <a href="#skill-demo">
-            <button>SKILL DEMONSTRATION</button></a>
+            <button>SKILLS</button></a>
           </div>
           <div>
             <a href="#contact">
@@ -76,6 +76,20 @@
           <p class="title-educ">Bachelor of Science in COMPUTER SCIENCE</p>
           <p class="body-educ">Pangasinan State University</p>
           <p class="body-educ">June 2009 - April 2013</p> 
+
+          <p class="title-educ">Photoshop Master Course</p>
+          <p class="body-educ">Udemy</p>
+          <p class="body-educ">April 2022</p>
+
+          <p class="title-educ">Copywriting Course</p>
+          <p class="body-educ">Kurso.PH</p>
+          <p class="body-educ">May 2022</p>
+
+          <p class="title-educ">Web Development, Bookkepping, Amazon FBA</p>
+          <p class="body-educ">Quickpro Online Professional Academy</p>
+          <p class="body-educ">May 2022</p>
+
+
           <p class="about-label"><strong>ABOUT ME</strong></p>
           
           <p class="about-me-text">
@@ -103,8 +117,18 @@
           WEB DEVELOPMENT
         </div>
         <div class="skill-1-description" id="skill-description-function">
-          This will SHOW the descriptiom of the skills
-        and what are the experiences and knowlegde etc.</div>
+          <p>
+            This online resume is the first webpage I've made.
+          I learned how to code way back in my college days and 
+          enhance it through online courses I took at <a href="https://quickpro.site/" target="_blank"
+          style="color: rgb(255, 255, 67);">QuickPro Online Professional Academy</a>
+          and other video tutorials.
+          </p>
+          <p>
+            With this skill, I can help you to build your own website or for your business to boost
+            online presence and have a higher volume of sales.
+          </p>        
+        </div>
       </div>
     </div>   
 
@@ -115,8 +139,11 @@
           PHOTO EDITING
         </div>
         <div class="skill-2-description" id="skill-description-function2">
-          This will SHOW the descriptiom of the skills
-        and what are the experiences and knowlegde etc.</div>
+          <p>
+            I took a Photoshop Master Course at <a href="https://www.udemy.com/" target="_blank"
+            style="color: rgb(255, 255, 67);">Udemy</a> to develop my knowledge in photo editing.</p>
+          <p>With this skill, I can help you to create advertisement and creative campaign for your products.
+          </p></div>
       </div>
       <div class="video-demo-container">
         <iframe width="100%" height="100%" src="https://www.youtube-nocookie.com/embed/dpQi6cHlh5o"
@@ -125,63 +152,36 @@
       </div>
     </div> 
 
-    <div class="skill-demo-3-container" >
-      <img src="images/video-edit-bg.jpg">
-      <div class="video-demo-container">
-        <iframe width="100%" height="100%" src="https://www.youtube-nocookie.com/embed/haefc_Uh914" title="YouTube video player"
-                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div>
-      <div class="skill-description-container">
-        <div class="skill-3" onclick="showDescription()" id="skill-button-function">
-          VIDEO EDITING
-        </div>
-        <div class="skill-3-description" id="skill-description-function3">
-          This will SHOW the descriptiom of the skills
-        and what are the experiences and knowlegde etc.</div>
-      </div>
-    </div> 
-
-    <div class="skill-demo-4-container">  
+    <div class="skill-demo-3-container">  
       <img src="images/copywriting-bg.jpg">
-      <div class="skill-description-container">
-        <div class="skill-4" onclick="showDescription()" id="skill-button-function">
-          COPYWRITING
-        </div>
-        <div class="skill-4-description" id="skill-description-function4">
-          This will SHOW the descriptiom of the skills
-        and what are the experiences and knowlegde etc.</div>
-      </div>
       <div class="video-demo-container">
         <iframe width="100%" height="100%" src="https://www.youtube-nocookie.com/embed/giIjE1TP-q8" title="YouTube video player" 
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
+      <div class="skill-description-container">
+        <div class="skill-3" onclick="showDescription()" id="skill-button-function">
+          COPYWRITING
+        </div>
+        <div class="skill-3-description" id="skill-description-function4">
+         <p><b>Struggling to create effective ad copy or marketing materials for your business?</b></p>
+        <p>I can help you! I learned many technique in the course I took at <a href="https://www.udemy.com/" target="_blank"
+          style="color: rgb(255, 255, 67);">Kurso.PH</a> that can create more engagement. </p></div>
+      </div>
+      
     </div>
 
-    <div class="skill-demo-5-container">
-      <img src="images/lead-gen-bg.jpg">
-      <div class="video-demo-container">
-        <iframe width="100%" height="100%" src="https://www.youtube-nocookie.com/embed/30kFmT0GXc8" title="YouTube video player" 
-                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div>
-      <div class="skill-description-container">
-        <div class="skill-5" onclick="showDescription()" id="skill-button-function">
-          LEAD GENERATION
-        </div>
-        <div class="skill-5-description" id="skill-description-function5">
-          This will SHOW the descriptiom of the skills
-        and what are the experiences and knowlegde etc.</div>
-      </div>
-    </div> 
 
-    <div class="skill-demo-6-container">  
+    <div class="skill-demo-4-container">  
       <img src="images/bookkeeping-bg.jpg">
       <div class="skill-description-container">
-        <div class="skill-6" onclick="showDescription()" id="skill-button-function">
+        <div class="skill-4" onclick="showDescription()" id="skill-button-function">
           BOOKKEEPING
         </div>
-        <div class="skill-6-description" id="skill-description-function6">
-          This will SHOW the descriptiom of the skills
-        and what are the experiences and knowlegde etc.</div>
+        <div class="skill-4-description" id="skill-description-function6">
+          <p><b>Don't have time to put all transactions of your business on record and track your actual sales and expenses?</b></p>
+         <p>You worry no more! With my experience in my previous role and additional learnings from the course I took,
+           I can provide you a clean and accurate records of all your business transaction.
+         </p></div>
       </div>
       <div class="video-demo-container">
         <iframe width="100%" height="100%" src="https://www.youtube-nocookie.com/embed/TxIYn615zBg" title="YouTube video player"
@@ -189,35 +189,21 @@
       </div>
     </div>
 
-    <div class="skill-demo-7-container">
-      <img src="images/seo-bg.jpg">
-      <div class="video-demo-container">
-        <iframe width="100%" height="100%" src="https://www.youtube-nocookie.com/embed/p8nFp8joUAk" title="YouTube video player" 
-                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div>
-      <div class="skill-description-container">
-        <div class="skill-7" onclick="showDescription()" id="skill-button-function">
-          SEARCH ENGINE OPTIMIZATION
-        </div>
-        <div class="skill-7-description" id="skill-description-function7">
-          This will SHOW the descriptiom of the skills
-        and what are the experiences and knowlegde etc.</div>
-      </div>
-    </div> 
-
-    <div class="skill-demo-8-container"> 
+    <div class="skill-demo-5-container"> 
       <img src="images/fba-amazon-bg.jpg"> 
-      <div class="skill-description-container">
-        <div class="skill-8" onclick="showDescription()" id="skill-button-function">
-          AMAZON FBA EXPERT
-        </div>
-        <div class="skill-8-description" id="skill-description-function8">
-          This will SHOW the descriptiom of the skills
-        and what are the experiences and knowlegde etc.</div>
-      </div>
       <div class="video-demo-container">
         <iframe width="100%" height="100%" src="https://www.youtube-nocookie.com/embed/TlXA6bA63zM" title="YouTube video player" 
          frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <div class="skill-description-container">
+
+        <div class="skill-5" onclick="showDescription()" id="skill-button-function">
+          AMAZON FBA EXPERT
+        </div>
+        <div class="skill-5-description" id="skill-description-function8">
+          <p>
+            I have been trained to all job requires in Amazon FBA. I can do product listing, product research, chat support, answering customer emails and many more.
+          </p></div>
       </div>
     </div>
 
@@ -287,17 +273,17 @@
             <p class="ref-email">VIEW PROFILE</p></a>
           </div>
           <div>
-            <p class="ref-name">Vino Angelo Bolisay</p>
-            <p class =ref-position>Software Engineer</p>
-            <p class="ref-company">Proplerr</p>
-            <a href="https://www.linkedin.com/in/vino-angelo-bolisay-99a53379/" target="_blank" style="text-decoration: none; letter-spacing: 5px;" >
+            <p class="ref-name">Ma. Veronica Moran</p>
+            <p class =ref-position>Bank Manager</p>
+            <p class="ref-company">CARD SME Bank</p>
+            <a href="https://www.facebook.com/veronmoran/" target="_blank" style="text-decoration: none; letter-spacing: 5px;" >
             <p class="ref-email">VIEW PROFILE</p></a>
           </div>
           <div>
-            <p class="ref-name">Vino Angelo Bolisay</p>
-            <p class =ref-position>Software Engineer</p>
-            <p class="ref-company">Proplerr</p>
-            <a href="https://www.linkedin.com/in/vino-angelo-bolisay-99a53379/" target="_blank" style="text-decoration: none; letter-spacing: 5px;" >
+            <p class="ref-name">Gilbert Salome</p>
+            <p class =ref-position>Unit Manager</p>
+            <p class="ref-company">Sun Life Philippines</p>
+            <a href="https://www.facebook.com/gilbert.salome/" target="_blank" style="text-decoration: none; letter-spacing: 5px;" >
             <p class="ref-email">VIEW PROFILE</p></a>
           </div>
         </div>
@@ -328,26 +314,5 @@
         </div>
       </div>  
     </div>
-    <!-- <script>
-      function showDescription() {
-        var x = document.getElementById("skill-description-function");
-        if (x.style.display === "none"){
-          x.style.display = "block";
-        } else {
-          x.style.display = "none";
-        }
-      }
-
-      function showDescription() {
-        const x = document.querySelectorAll("skill-description-function2");
-        if (x.style.display === "none"){
-          x.style.display = "block";
-        } else {
-          x.style.display = "none";
-        }
-      }
-
-    </script> -->
-
   </body>
 </html>
