--- a/index.html
+++ b/index.html
@@ -146,9 +146,8 @@
           </p></div>
       </div>
       <div class="video-demo-container">
-        <iframe width="100%" height="100%" src="https://www.youtube-nocookie.com/embed/dpQi6cHlh5o"
-         title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-         allowfullscreen></iframe>
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/wxP2HjREJ8E" title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div> 
 
